# TechnoSTM

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh  doxygen-config.txt  doxygen-config.txt.bak  run.sh  scan.gfs
.cache/clangd/index/: ADS1115.cpp.39E57844A5CB975C.idx  ADS1115.h.BA6A28B68F38FA41.idx  Aiguille.cpp.AB6AE12104D46A94.idx  Aiguille.h.350635B129E0ECDC.idx  GPIO.cpp.07DF272986C543CF.idx  GPIO.h.B247580F5679B813.idx  I2C.cpp.563CACCF17E8BAE9.idx  I2C.h.2B4B04772BCE3A94.idx  Plateforme.cpp.73D4472CD66F8A19.idx  Plateforme.h.599BA2ACF40B837A.idx  Serial.cpp.67F3319728F799CF.idx  Serial.h.F7388FE89314398C.idx  StepMotor.cpp.208E02B89EF8D44E.idx  StepMotor.h.8E7E391936D18666.idx  TechnoSTM.cpp.9925651BCF41ADF3.idx  TestADS1115.cpp.9AC4ED41F7BC0ECD.idx  Utils.cpp.69F9791F738D7D94.idx  Utils.h.AC8A8702597AA6D4.idx  Vector3D.cpp.E630A80D723DD555.idx  Vector3D.h.D35CD869E3964A9D.idx
.clangd/index/: ADS1115.cpp.C46D838909EA9CE2.idx  ADS1115.h.8CA3BDFFD24FD8FB.idx  Aiguille.cpp.109253B3351C0E55.idx  Aiguille.h.031105AEFEEF2C88.idx  GPIO.cpp.35659B2FF2A62B98.idx  GPIO.h.C2D621A722838446.idx  I2C.cpp.2951EFB7F1AEA499.idx  I2C.h.F5657024A93F956D.idx  Plateforme.cpp.D7C56508D878B9F4.idx  Plateforme.h.56C606C7DF05A42B.idx  Serial.cpp.FB16C5FB64247BE8.idx  Serial.h.1C40FA8D42B0C533.idx  StepMotor.cpp.210C6817B57EC085.idx  StepMotor.h.FBB5B3CA53BEBDBB.idx  Utils.cpp.FC323A6E9DC077DA.idx  Utils.h.1118BEE3EE4C6B9E.idx  Vector3D.cpp.BC2CC1F6834DAD91.idx  Vector3D.h.EE8F133865283CBE.idx  main.cpp.570DBFFF4C3FDEEB.idx
doc/html/: 0x1234-example.xhtml  0x12345678-example.xhtml  ADS1115_8cpp.xhtml  ADS1115_8cpp__incl.map  ADS1115_8cpp__incl.md5  ADS1115_8cpp_source.xhtml  ADS1115_8h.xhtml  ADS1115_8h__dep__incl.map  ADS1115_8h__dep__incl.md5  ADS1115_8h__incl.map  ADS1115_8h__incl.md5  ADS1115_8h_source.xhtml  Aiguille_8cpp.xhtml  Aiguille_8cpp__incl.map  Aiguille_8cpp__incl.md5  Aiguille_8cpp_source.xhtml  Aiguille_8h.xhtml  Aiguille_8h__dep__incl.map  Aiguille_8h__dep__incl.md5  Aiguille_8h__incl.map  Aiguille_8h__incl.md5  Aiguille_8h_source.xhtml  Debug_8h.xhtml  Debug_8h_source.xhtml  Error_8h.xhtml  Error_8h_source.xhtml  GPIO_8cpp.xhtml  GPIO_8cpp__incl.map  GPIO_8cpp__incl.md5  GPIO_8cpp_source.xhtml  GPIO_8h.xhtml  GPIO_8h__dep__incl.map  GPIO_8h__dep__incl.md5  GPIO_8h__incl.map  GPIO_8h__incl.md5  GPIO_8h_source.xhtml  I2C_8cpp.xhtml  I2C_8cpp__incl.map  I2C_8cpp__incl.md5  I2C_8cpp_source.xhtml  (+194 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  (+46 more)
doc/latex/: refman.tex
lib/gwyddion/libprocess/: Makefile.am  Makefile.in  arithmetic.c  arithmetic.h  brick.c  brick.h  cdline.c  cdline.h  correct-laplace.c  correct.c  correct.h  correlation.c  correlation.h  cwt.c  cwt.h  datafield.c  datafield.h  dataline.c  dataline.h  dwt.c  dwt.h  elliptic.c  elliptic.h  filters-convdeconv.c  filters-minmax.c  filters.c  filters.h  fractals.c  fractals.h  grains-disttrans.c  grains-values.c  grains-wshed.c  grains.c  grains.h  gwycaldata.c  gwycaldata.h  gwycalibration.c  gwycalibration.h  gwyfftw.h  gwygrainvalue.c  (+51 more)
programs/: CMakeLists.txt  TechnoSTM.cpp  TestADS1115.cpp  TestStepMotor.cpp  main.cpp
src/: ADS1115.cpp  Aiguille.cpp  CMakeLists.txt  GPIO.cpp  I2C.cpp  Image.cpp  Piezo.cpp  Plateforme.cpp  STM.cpp  Serial.cpp  Socket.cpp  StepMotor.cpp  Utils.cpp  main.cpp
src/include/: ADS1115.h  Aiguille.h  Debug.h  Error.h  GPIO.h  I2C.h  Image.h  Piezo.h  Plateforme.h  STM.h  Serial.h  Socket.h  StepMotor.h  Utils.h  Vector3D.h
tests/: TestADS1115.cpp  TestDAC-EVALAD5674EB.cpp  TestSerial.cpp  TestStepMotor.cpp  testUtils.cpp
(+54 files in other folders)
